--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Slavo7-nextjs",
+  "name": "lionnext",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Slavo <slavo@slavo3.com>",
