--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Slavo <slavo@slavo3.com>",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.1.5",
     "@theme-ui/presets": "^0.3.5",
     "body-parser": "^1.19.0",
     "dotenv-load": "^2.0.0",
@@ -19,5 +20,9 @@
     "dev": "next",
     "build": "next build",
     "start": "next start"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.2",
+    "typescript": "^4.1.5"
   }
 }
