--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "start": "next start"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.2.0",
     "@types/react": "^17.0.2",
     "typescript": "^4.1.5"
   }
