--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,19 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/data/data.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/data/data.js",
+    "pages/api/note/index.js",
+    "pages/api/note/[id].js",
+    "pages/_app.jsx",
+    "pages/index.jsx",
+    "pages/notes/index.jsx",
+    "pages/notes/[id].jsx",
+    "src/components/Nav.jsx",
+    "pages/api/index.js"
+  ],
   "exclude": ["node_modules"]
 }
