--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "pages/index.jsx",
     "pages/notes/index.jsx",
     "pages/notes/[id].jsx",
-    "src/components/Nav.jsx",
+    "src/components/nav.jsx",
     "pages/api/index.js"
   ],
   "exclude": ["node_modules"]
