--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.2.0",
+    "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "typescript": "^4.1.5"
   }
